--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:layout_height="0dp"
+        android:layout_width="0dp"
         android:id="@+id/imageView4"
-        android:layout_width="0"
-        android:layout_height="0"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
