--- a/app/src/main/res/layout/fragment_flat_choose.xml
+++ b/app/src/main/res/layout/fragment_flat_choose.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".flat_choose.FlatChooseActivity">
+    tools:context=".JoinFlatFragment">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/join_flat_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/join_flat"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/button2" />
+        app:layout_constraintEnd_toEndOf="@+id/create_new_flat_button"
+        app:layout_constraintStart_toStartOf="@+id/create_new_flat_button" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/create_new_flat_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.500684" />
+        app:layout_constraintGuide_percent="0.5" />
 
     <EditText
         android:id="@+id/editText2"
@@ -43,7 +43,7 @@
         android:autofillHints="000000"
         android:inputType="number"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/join_flat_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
