--- a/app/src/main/res/layout/dialog_create_flat.xml
+++ b/app/src/main/res/layout/dialog_create_flat.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/create_flat_dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name_of_flat"
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/create_flat_dialog_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -24,7 +24,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/create_flat_dialog_title"
         android:autofillHints="@string/name_of_flat"
-        android:labelFor="@id/editText"/>
+        android:labelFor="@id/create_flat_dialog_edit_text"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
