--- a/app/src/main/res/layout/assignment_recycler_item_first.xml
+++ b/app/src/main/res/layout/assignment_recycler_item_first.xml
@@ -32,7 +32,7 @@
             android:foregroundGravity="center"
             app:layout_constraintStart_toStartOf="@id/week_view"
             app:layout_constraintTop_toBottomOf="@id/week_view"
-            tools:src="@drawable/ic_profile" />
+            android:src="@drawable/ic_profile" />
 
 
         <TextView
