--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,18 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <TextView
-        android:id="@+id/name_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/flat_name"
-        android:padding="16dp"
-        android:text="Flat name:"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/flat_name"
@@ -21,10 +11,13 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_title"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/code"
-        android:textSize="30sp"
-        android:paddingTop="16dp"/>
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:paddingTop="16dp"
+        tools:text="ABCD"
+        />
 
     <TextView
         android:id="@+id/code"
@@ -34,7 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/flat_code"
-        android:padding="16dp"
+        android:paddingTop="16dp"
         android:text="Invitation code:"/>
 
     <TextView
@@ -44,9 +37,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf ="@id/code"
-        android:textSize="24sp"
-        android:textColor="@color/colorAccent"
-        android:paddingTop="16dp"/>
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="@color/accent" />
+
+
+    <ImageView
+        android:background="@drawable/background_white"
+        android:id="@+id/flat_qr_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf ="@id/flat_code"
+        android:layout_marginTop="16dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,14 +58,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/user_list"
+        android:textStyle="bold"
         android:text="Flatmates:"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/user_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/leave_flat_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="16dp"/>
+        android:paddingBottom="8dp"/>
+
+    <Button
+        android:id="@+id/leave_flat_button"
+        android:background="@drawable/button_style"
+        android:layout_width="0dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_height="wrap_content"
+        android:text="@string/leave_flat_button_title"
+        android:textAllCaps="false"
+        android:textColor="@color/text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
