--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
         android:title="@string/home_title"/>
 
     <item
-        android:id="@+id/navigation_assignment"
+        android:id="@+id/nav_assignment"
         android:icon="@drawable/ic_assignment"
         android:title="@string/assignment_title"/>
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
         android:title="@string/profile_title"/>
 
