--- a/app/src/main/res/layout/fragment_assignment.xml
+++ b/app/src/main/res/layout/fragment_assignment.xml
@@ -4,21 +4,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".AssignmentFragment">
+    tools:context=".assigment.AssignmentFragment">
 
 
-    <me.jerryhanks.timelineview.TimeLineView
-        android:id="@+id/timelineView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/assignment_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:listitem="@layout/assignment_recycler_item_next" />
 
 
 
