--- a/app/src/main/res/layout/assignment_recycler_item_first.xml
+++ b/app/src/main/res/layout/assignment_recycler_item_first.xml
@@ -52,11 +52,22 @@
             tools:text="Dummy" />
 
         <Button
+            android:id="@+id/clean_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/finish_clean"
+            android:focusableInTouchMode="false"
             app:layout_constraintEnd_toEndOf="@id/user_name"
-            app:layout_constraintTop_toBottomOf="@id/user_name" />
+            app:layout_constraintTop_toBottomOf="@id/user_name"/>
+
+        <TextView
+            android:id="@+id/text_clean"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Done"
+            android:textSize="20dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
