--- a/app/src/main/res/layout/assignment_recycler_item.xml
+++ b/app/src/main/res/layout/assignment_recycler_item.xml
@@ -14,6 +14,7 @@
         android:layout_width="3sp"
         android:layout_height="12sp"
         android:background="@drawable/vertical_line"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toTopOf="@id/cardView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,8 +26,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vertical_line">
-
+        app:layout_constraintTop_toBottomOf="@id/vertical_line"
+        app:cardUseCompatPadding="true"
+        app:elevation="0dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/assignmentItemLayout"
             android:layout_width="match_parent"
@@ -54,7 +56,7 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/profile_picture"
