--- a/app/src/main/res/layout/assignment_recycler_item_first.xml
+++ b/app/src/main/res/layout/assignment_recycler_item_first.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
+    android:layout_height="100dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp">
+    app:cardBackgroundColor="@color/primary_light"
+    android:elevation="2dp"
+
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="8dp">
 
         <TextView
@@ -52,22 +54,35 @@
             tools:text="Dummy" />
 
         <Button
+            android:background="@drawable/button_style"
             android:id="@+id/clean_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/finish_clean"
             android:focusableInTouchMode="false"
-            app:layout_constraintEnd_toEndOf="@id/user_name"
-            app:layout_constraintTop_toBottomOf="@id/user_name"/>
-
-        <TextView
-            android:id="@+id/text_clean"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="Done"
-            android:textSize="20dp"/>
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:id="@+id/clean_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_check"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"/>
+
+        <ImageView
+            android:id="@+id/clean_pending"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_brush"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
