--- a/app/src/main/res/layout/assignment_recycler_item_next.xml
+++ b/app/src/main/res/layout/assignment_recycler_item_next.xml
@@ -16,13 +16,14 @@
         android:background="@drawable/vertical_line"
         app:layout_constraintBottom_toTopOf="@id/cardView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"/>
 
     <TextView
         android:id="@+id/week_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10sp"
+        android:layout_marginStart="16sp"
         android:gravity="center"
         android:textColor="@color/primary_dark"
         android:textSize="16sp"
@@ -38,7 +39,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vertical_line">
+        app:layout_constraintTop_toBottomOf="@id/vertical_line"
+        app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/assignmentItemLayout"
@@ -67,7 +69,7 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/profile_picture"
