--- a/app/src/main/res/layout/assignment_recycler_item_next.xml
+++ b/app/src/main/res/layout/assignment_recycler_item_next.xml
@@ -13,11 +13,11 @@
         android:id="@+id/vertical_line"
         android:layout_width="3sp"
         android:layout_height="32sp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/vertical_line"
         app:layout_constraintBottom_toTopOf="@id/cardView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/week_view"
@@ -37,10 +37,10 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vertical_line"
-        app:cardUseCompatPadding="true">
+        app:layout_constraintTop_toBottomOf="@id/vertical_line">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/assignmentItemLayout"
@@ -48,16 +48,19 @@
             android:layout_height="wrap_content"
             android:padding="8dp">
 
-            <ImageView
+            <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/profile_picture"
-                android:layout_width="30sp"
-                android:layout_height="30sp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_margin="8dp"
                 android:contentDescription="@string/profile_picture"
                 android:foregroundGravity="center"
+                android:src="@drawable/ic_profile"
+                app:civ_border="true"
+                app:civ_border_color="@color/accent"
+                app:civ_border_width="2dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/ic_profile"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <TextView
@@ -68,8 +71,8 @@
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:maxLines="1"
-                android:textColor="@color/primary_text"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/primary_text"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                 app:layout_constraintEnd_toEndOf="parent"
