--- a/app/src/main/res/layout/dialog_create_flat.xml
+++ b/app/src/main/res/layout/dialog_create_flat.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,22 +8,21 @@
     android:paddingHorizontal="30dp">
 
 
-
     <EditText
         android:id="@+id/create_flat_dialog_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
-        android:textColorHint="@drawable/selector"
+        android:ems="10"
+        android:gravity="center"
         android:hint="@string/name_of_flat"
-        android:labelFor="@id/create_flat_dialog_edit_text" />
+        android:inputType="text"
+        android:labelFor="@id/create_flat_dialog_edit_text"
+        android:textColorHint="@drawable/selector"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
