--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,55 +7,54 @@
     tools:context=".ProfileFragment">
 
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/profile_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_margin="24dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:civ_border="true"
+        app:civ_border_color="@color/accent"
+        app:civ_border_width="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-    </ImageView>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="50sp"
         android:layout_marginTop="16dp"
         android:textColor="@color/primary_text"
-        app:layout_constraintTop_toBottomOf="@id/profile_picture"
+        android:textSize="50sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/profile_picture" />
 
 
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/primary_text"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_name"
+        android:textColor="@color/primary_text"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
-
+        app:layout_constraintTop_toBottomOf="@id/profile_name" />
 
 
     <Button
         android:id="@+id/logout_button"
-        android:background="@drawable/button_style"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="15dp"
         android:layout_height="wrap_content"
-        android:text="Log out"
+        android:layout_marginHorizontal="15dp"
+        android:background="@drawable/button_style"
+        android:text="@string/logout_button_title"
         android:textAllCaps="false"
         android:textColor="@color/text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
