--- a/app/src/main/res/layout/fragment_join_flat.xml
+++ b/app/src/main/res/layout/fragment_join_flat.xml
@@ -10,7 +10,7 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/join_flat_title"
@@ -18,6 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginHorizontal="8dp"
+        android:gravity="center"
         tools:ignore="SpUsage" />
 
 
